plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.5'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'org.example'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly   'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly   'io.jsonwebtoken:jjwt-jackson:0.11.5'
    implementation 'org.springframework.shell:spring-shell-starter:3.1.5'

    compileOnly        'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    developmentOnly     'org.springframework.boot:spring-boot-devtools'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.mockito:mockito-junit-jupiter'
    testRuntimeOnly    'org.junit.platform:junit-platform-launcher'
}

test {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
        showStandardStreams = true
    }
}

tasks.named('javadoc', Javadoc) {
    options {
        addBooleanOption('private', true)
        links 'https://docs.oracle.com/en/java/javase/17/docs/api/'
    }
    finalizedBy 'copyJavadocToStatic'
}

tasks.register('copyJavadocToStatic', Copy) {
    dependsOn 'javadoc'
    from layout.buildDirectory.dir('docs/javadoc')
    into layout.projectDirectory.dir('src/main/resources/static/apidocs')
}

tasks.named('bootJar') {
    dependsOn 'copyJavadocToStatic'
}
